force-app/main/default/objects/ffr__SummarizationRunInformation__c/ffr__SummarizationRunInformation__c.object-meta.xml
<CustomObject>
    <description>Holds information about the the last time a summarization template was built.</description>
    <label>Summarization Run Information</label>
    <nameField>
        <displayFormat>SRI-{000000}</displayFormat>
        <label>Summarization Run Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summarization Run Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>