force-app/main/default/objects/ffr__SummarizationRunInformation__c/fields/ffr__EndTime__c.field-meta.xml
<CustomField>
    <fullName>ffr__EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>