force-app/main/default/objects/ffr__SummarizationRunInformation__c/fields/ffr__LastSuccessfulInstance__c.field-meta.xml
<CustomField>
    <fullName>ffr__LastSuccessfulInstance__c</fullName>
    <label>Last Successful Instance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>