force-app/main/default/objects/ffr__SummarizationRunInformation__c/fields/ffr__MassDeleteControlRecord__c.field-meta.xml
<CustomField>
    <fullName>ffr__MassDeleteControlRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mass Delete Control Record</label>
    <referenceTo>ffr__MassDeleteControlRecord__c</referenceTo>
    <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
    <relationshipName>MassDeleteControlRecord</relationshipName>
    <type>Lookup</type>
</CustomField>