force-app/main/default/objects/ffr__SummarizationRunInformation__c/fields/ffr__SummarizationTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__SummarizationTemplate__c</fullName>
    <label>Summarization Template</label>
    <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
    <relationshipLabel>SummarizationRunInformation</relationshipLabel>
    <relationshipName>SummarizationRunInformation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>